# libtq

./: CMakeLists.txt
doxygen-docs/: Doxyfile
include/: itask.hpp  task_queue.hpp  wait_task.hpp
src/: itask.cc  itask_queue.cc  itask_queue.hpp  mutex_lock.cc  mutex_lock.hpp  runner_canceled.cc  runner_canceled.hpp  rwlock_rdlock.cc  rwlock_rdlock.hpp  rwlock_wrlock.cc  rwlock_wrlock.hpp  shutdown_task.cc  shutdown_task.hpp  task.cc  task.hpp  task_allocator.cc  task_allocator.hpp  task_cleanup.cc  task_cleanup.hpp  task_desc.cc  task_desc.hpp  task_handle.cc  task_handle.hpp  task_queue.cc  task_runner.cc  task_runner.hpp  wait_task.cc
tests/: CMakeLists.txt  tq_tester.cc
tests/include/: bool_flag.hpp  thread.hpp
tests/src/: bool_flag.cc  thread.cc
tests/tq-tester/: CMakeLists.txt  bool_flag.cc  bool_flag.hpp  queue_thread_manager.cc  queue_thread_manager.hpp  task.cc  task.hpp  task_manager.cc  task_manager.hpp  task_thread_manager.cc  task_thread_manager.hpp  test_task.cc  test_task.hpp  tq_tester.cc
